--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
         unitTests {
             includeAndroidResources = true
         }
+        animationsDisabled = true
     }
 }
 
